bower.json corrections

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  name: 'cartodb.js#3.11',
+  name: 'cartodb.js-3.11-version',
   homepage: 'https://github.com/mcm3c/bower_cartodb_v3.11',
   authors: [
     'CartoDB <support@cartodb.com>'
