bower.json corrections

--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,14 @@
 {
-  name: 'cartodb.js-3.11-version',
-  homepage: 'https://github.com/mcm3c/bower_cartodb_v3.11',
-  authors: [
-    'CartoDB <support@cartodb.com>'
+  "name": "cartodb.js-3.11-version",
+  "homepage": "https://github.com/mcm3c/bower_cartodb_v3.11",
+  "authors": [
+    "CartoDB <support@cartodb.com>"
   ],
-  description: '',
-  main: '',
-  moduleType: [],
-  keywords: [
-    'cartodb'
+  "description": "",
+  "main": "",
+  "moduleType": [],
+  "keywords": [
+    "cartodb"
   ],
-  license: 'MIT'
+  "license": "MIT"
 }
