--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "cartodb.js-3.11-version",
+  "version": "3.11",
   "homepage": "https://github.com/mcm3c/bower_cartodb_v3.11",
   "authors": [
     "CartoDB <support@cartodb.com>"
